
[package]
name = "webql"
version = "0.1.0"
edition = "2021"
authors = ["Elad Kaplan <kaplan.elad@gmail.com>"]
license = "Apache-2.0"
description = "WebQL is a library that allows to get data from multiple resources or JSON and filter the result"
homepage = "https://github.com/rusty-ferris-club/webql"
repository = "https://github.com/rusty-ferris-club/webql"
documentation = "https://docs.rs/webql/latest/webql"
readme = "../README.md"
keywords = ["webql"]

[lib]
name = "webql"

[dependencies]
anyhow = "1.0.65"
serde = "1"
serde_derive = "1"
serde_yaml = "0.9.13"
serde_json = "1.0.87"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
chrono = { version = "0.4.22", features = ["serde"]}
jql = { version = "5.1.1"}
serde_urlencoded = { version = "0.7.1", optional = true }
reqwest = { version = "0.11.12", features = ["blocking", "json"], optional = true  }

[features]
default = []
github = ["dep:reqwest", "dep:serde_urlencoded"]

all = [
    "github"
]

[dev-dependencies]
insta = { version = "1.17.2", features = ["filters"] }
mockall = "0.11.3"
httpmock = "0.6"

[[example]]
name = "github"
path = "examples/github.rs"
required-features = ["github"]

[[example]]
name = "with-logger"
path = "examples/with-logger.rs"
required-features = ["github"]